# kit-motion-planning-exercise

./: .dockerignore  .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md
docker/: .env.example  Dockerfile.core  Dockerfile.gpu  Dockerfile.isaac  docker-compose.yml  entrypoint.sh  franka.repos  isaac_ros.repos  run_core.sh  run_gpu.sh  run_isaac.sh
docs/: 00_overview.md  01_install_core.md  02_install_gpu.md  03_ompl_playground.md  04_benchmarking.md  05_competition.md  06_troubleshooting.md  07_distribution.md
ros2_ws/src/kit_mp_benchmark/: package.xml  setup.cfg  setup.py
ros2_ws/src/kit_mp_benchmark/config/: benchmark.yaml  fr3_joint_limits_locked.yaml
ros2_ws/src/kit_mp_benchmark/kit_mp_benchmark/: leaderboard.py  plot.py  run_benchmark.py  scorer.py  validate.py
ros2_ws/src/kit_mp_benchmark/launch/: benchmark.launch.py  competition.launch.py
ros2_ws/src/kit_mp_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/kit_mp_bringup/config/: cumotion_planning.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines.yaml  ros2_controllers.yaml  stomp_planning.yaml
ros2_ws/src/kit_mp_bringup/launch/: core.launch.py  isaac_execution.launch.py  rviz.launch.py
ros2_ws/src/kit_mp_bringup/rviz/: exercise.rviz
ros2_ws/src/kit_mp_curobo/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/kit_mp_curobo/config/: fr3.xrdf
ros2_ws/src/kit_mp_curobo/launch/: cumotion_planner.launch.py
ros2_ws/src/kit_mp_isaac/: CMakeLists.txt  package.xml
ros2_ws/src/kit_mp_isaac/action_graphs/: ros2_bridge.md
ros2_ws/src/kit_mp_isaac/config/: isaac_controllers.yaml
ros2_ws/src/kit_mp_isaac/scripts/: run_isaac_fr3.py
ros2_ws/src/kit_mp_isaac/usd/: README.md
ros2_ws/src/kit_mp_scenes/: package.xml  setup.cfg  setup.py
ros2_ws/src/kit_mp_scenes/kit_mp_scenes/: scene_io.py  scene_loader.py
ros2_ws/src/kit_mp_scenes/scenes/: cluttered_table.yaml  competition.yaml  empty.yaml  narrow_passage.yaml  shelf.yaml
ros2_ws/src/kit_mp_task_api/: package.xml  setup.cfg  setup.py
ros2_ws/src/kit_mp_task_api/kit_mp_task_api/: __init__.py  moveit_params.py  planner_config.py  run_task.py  solve.py  student_solution.py  task.py
ros2_ws/src/kit_mp_task_api/tasks/: competition_task.yaml  task_01_reach.yaml  task_02_shelf_pick.yaml
scripts/: publish_image.sh  run_task.sh  score_local.sh  setup_workspace.sh  validate_submission.py  verify_gpu.sh
submission/: README.md
submission/TEMPLATE/: ompl_planning.yaml  results.json  student_solution.py  submission.yaml
