<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_mp_benchmark</name>
  <version>1.0.0</version>
  <description>Scoring and benchmarking harness for the KIT motion-planning exercise.</description>
  <maintainer email="jakob.thumm@kit.edu">Jakob Thumm</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_ros_benchmarks</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>kit_mp_scenes</exec_depend>
  <exec_depend>kit_mp_task_api</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
