<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_mp_curobo</name>
  <version>1.0.0</version>
  <description>cuRobo / cuMotion (GPU) integration for the KIT motion-planning exercise.</description>
  <maintainer email="jakob.thumm@kit.edu">Jakob Thumm</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>isaac_ros_cumotion</exec_depend>
  <exec_depend>isaac_ros_cumotion_moveit</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>franka_fr3_moveit_config</exec_depend>
  <exec_depend>kit_mp_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
