<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kit_mp_task_api</name>
  <version>1.0.0</version>
  <description>Task definitions and the student-facing planning API for the KIT exercise.</description>
  <maintainer email="jakob.thumm@kit.edu">Jakob Thumm</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>kit_mp_scenes</exec_depend>
  <!-- moveit_params.py builds the robot description from these -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_fr3_moveit_config</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
